@@ -644,118 +644,112 @@ static void Mod_LoadLighting (lump_t *l)
 
 	if (gl_lightmap_format == GL_RGBA)
 	{
-		// LordHavoc: .lit support
-		int	i, mark;
+		int	i;
 		byte	*in, *out, *data;
 		byte	d;
-		char	litfilename[MAX_QPATH];
-		unsigned int	path_id;
 
 		loadmodel->lightdata = NULL;
 
 		if (gl_coloredlight.integer)
 		{	// LordHavoc: check for a .lit file
+			int		mark;
+			char	litfilename[MAX_QPATH];
+			unsigned int	path_id;
+
 			strcpy(litfilename, loadmodel->name);
 			COM_StripExtension(litfilename, litfilename, sizeof(litfilename));
 			strcat(litfilename, ".lit");
 			Con_DPrintf("trying to load %s\n", litfilename);
 			mark = Hunk_LowMark();
 			data = (byte*) FS_LoadHunkFile (litfilename, &path_id);
-			if (data)
+			if (data == NULL)
+				goto _load_internal;
+			// use lit file only from the same gamedir as the map
+			// itself or from a searchpath with higher priority.
+			if (path_id < loadmodel->path_id)
 			{
-				// use lit file only from the same gamedir as the map
-				// itself or from a searchpath with higher priority.
-				if (path_id < loadmodel->path_id)
+				Hunk_FreeToLowMark(mark);
+				Con_Printf("ignored %s from a gamedir with lower priority\n", litfilename);
+				goto _load_internal;
+			}
+			if (data[0] != 'Q' || data[1] != 'L' || data[2] != 'I' || data[3] != 'T')
+			{
+				Hunk_FreeToLowMark(mark);
+				Con_Printf("Corrupt .lit file (old version?), ignoring\n");
+				goto _load_internal;
+			}
+			i = LittleLong(((int *)data)[1]);
+			if (i != 1)
+			{
+				Hunk_FreeToLowMark(mark);
+				Con_Printf("Unknown .lit file version (%d)\n", i);
+				goto _load_internal;
+			}
+			Con_DPrintf("%s loaded\n", litfilename);
+			Con_DPrintf("Loaded colored light (32-bit)\n");
+			if (gl_coloredlight.integer == 1)
+			{
+				loadmodel->lightdata = data + 8;
+				return;
+			}
+			else if (!l->filelen)
+			{
+				loadmodel->lightdata = data + 8;
+				Con_Printf("No white light data. Using colored only\n");
+				return;
+			}
+			else	// experimental blend code for gl_coloredlight.integer == 2
+			{
+				int	min_light = 8;
+				int	k = 0;
+				int	j, r, g, b;
+				float	l2lc = 0;
+				float	lc = 0;
+				float	li = 0;
+
+				// allocate memory and load light data from .bsp
+				mark = Hunk_LowMark();
+				loadmodel->lightdata = (byte *) Hunk_AllocName (l->filelen, "light");
+				memcpy (loadmodel->lightdata, mod_base + l->fileofs, l->filelen);
+
+				for (i = 0, j = 0, k = 0; i < l->filelen * 3; i += 3, j += 3)
 				{
-					Hunk_FreeToLowMark(mark);
-					Con_Printf("ignored %s from a gamedir with lower priority\n", litfilename);
+					// set some minimal light level
+					r = q_max(data[8+i  ], min_light);
+					g = q_max(data[8+i+1], min_light);
+					b = q_max(data[8+i+2], min_light);
+
+					// compute brightness of colored ligths present in .lit file
+					lc = (r + g + b) / 3.0f;
+					li = (float) loadmodel->lightdata[k];
+					if (li == 0)
+						li = min_light;
+					if (lc == 0)
+						lc = min_light;
+
+					// compute light amplification level
+					l2lc = li / lc;
+					if (l2lc < 1.5f)
+						l2lc = 1.0f;
+
+					// update colors
+					data[8+j]   = (byte) q_min (q_max(ceil(r*l2lc), min_light), 255);
+					data[8+j+1] = (byte) q_min (q_max(ceil(g*l2lc), min_light), 255);
+					data[8+j+2] = (byte) q_min (q_max(ceil(b*l2lc), min_light), 255);
+					k++;
 				}
-				else
-				if (data[0] == 'Q' && data[1] == 'L' && data[2] == 'I' && data[3] == 'T')
-				{
-					i = LittleLong(((int *)data)[1]);
-					if (i == 1)
-					{
-						Con_DPrintf("%s loaded\n", litfilename);
-						Con_DPrintf("Loaded colored light (32-bit)\n");
-						if ( gl_coloredlight.integer == 1 )
-						{
-							loadmodel->lightdata = data + 8;
-							return;
-						}
-						else
-						{
-							int	min_light = 8;
-							int	k = 0;
-							int	j, r, g, b;
-							float	l2lc = 0;
-							float	lc = 0;
-							float	li = 0;
+				Hunk_FreeToLowMark(mark);
 
-							if (!l->filelen)
-							{
-								loadmodel->lightdata = data + 8;
-								Con_Printf("No white light data. Using colored only\n");
-								return;
-							}
-							Con_DPrintf("Loaded white light.\n");
-
-							// allocate memory and load light data from .bsp
-							mark = Hunk_LowMark();
-							loadmodel->lightdata = (byte *) Hunk_AllocName (l->filelen, "light");
-							memcpy (loadmodel->lightdata, mod_base + l->fileofs, l->filelen);
-
-							for (i = 0, j = 0, k = 0; i < l->filelen * 3; i += 3, j += 3)
-							{
-								// set some minimal light level
-								r = q_max(data[8+i], min_light);
-								g = q_max(data[8+i+1], min_light);
-								b = q_max(data[8+i+2], min_light);
-
-								// compute brightness of colored ligths present in .lit file
-								lc = (r + g + b) / 3.0f;
-								li = (float) loadmodel->lightdata[k];
-
-								if (li == 0)
-									li = min_light;
-								if (lc == 0)
-									lc = min_light;
-
-								// compute light amplification level
-								l2lc = (float) li/lc;
-								if ( l2lc < 1.5f )
-									l2lc = 1;
-
-								// update colors
-								data[8+j]   = (byte) q_min(q_max( ceil(r*l2lc), min_light ),255);
-								data[8+j+1] = (byte) q_min(q_max( ceil(g*l2lc), min_light ),255);
-								data[8+j+2] = (byte) q_min(q_max( ceil(b*l2lc), min_light ),255);
-								k++;
-							}
-							Hunk_FreeToLowMark(mark);
-
-							loadmodel->lightdata = data + 8;
-							Con_DPrintf("Blended lightmaps.\n");
-							return;
-						}
-					}
-					else
-					{
-						Hunk_FreeToLowMark(mark);
-						Con_Printf("Unknown .lit file version (%d)\n", i);
-					}
-				}
-				else
-				{
-					Hunk_FreeToLowMark(mark);
-					Con_Printf("Corrupt .lit file (old version?), ignoring\n");
-				}
+				loadmodel->lightdata = data + 8;
+				Con_DPrintf("Blended colored and white light.\n");
+				return;
 			}
 		}
+  _load_internal:
 		// no .lit found, expand the white lighting data to color
 		if (!l->filelen)
 			return;
-		loadmodel->lightdata = (byte *) Hunk_AllocName ( l->filelen*3, litfilename);
+		loadmodel->lightdata = (byte *) Hunk_AllocName (l->filelen*3, "light");
 		in = loadmodel->lightdata + l->filelen*2; // place the file at the end, so it will not be overwritten until the very last write
 		out = loadmodel->lightdata;
 		memcpy (in, mod_base + l->fileofs, l->filelen);
